1st video complete(Namaste React)

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Namaste React</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <div id="root">Not Rendered</div>
@@ -23,23 +24,6 @@
 <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 
-<script>
-    const heading1 = React.createElement("h1" , {
-        id: "title",
-    } , "Namaste Everyone!");
-    console.log(heading1);
-
-    const heading2 = React.createElement("h2" , {
-        id: "title",
-    } , "heading 2!");
-
-    const container = React.createElement("div" , {
-        id: "container"
-    } , [heading1, heading2])
-
-
-    const root = ReactDOM.createRoot(document.getElementById("root"));
-    root.render(container);
-</script>
+<script src = "./App.js"></script>
 </body>
 </html>
