--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
 
 <!-- by react -->
 
-<script type = "module" src = "./App.js"></script>
+<script type = "module" src = "src/App.js"></script>
 </body>
 </html>
