--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="./src/assets/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Namaste React</title>
+    <title>Epiceats</title>
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
